--- a/BankClient/nbproject/project.properties
+++ b/BankClient/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gwt-dev.jar=C:\\Program Files\\gwt-2.8.0\\gwt-dev.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +43,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.GWT2.8.0.classpath}
+    ${libs.GWT2.8.0.classpath}:\
+    ${file.reference.gwt-dev.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
