--- a/BankClient/nbproject/project.properties
+++ b/BankClient/nbproject/project.properties
@@ -45,7 +45,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.GWT2.8.0.classpath}:\
-    ${file.reference.gwt-dev.jar}
+    ${file.reference.gwt-dev.jar}:\
+    ${libs.javaee-api-7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
