Добавил переводы между своими счетами. Ошибка выбора списка счетов

--- a/BankClient/web/WEB-INF/web.xml
+++ b/BankClient/web/WEB-INF/web.xml
@@ -2,11 +2,19 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>UserCheck</servlet-name>
-        <servlet-class>ru.mti.bankclient.server.UserCheck.UserCheckImpl</servlet-class>
+        <servlet-class>ru.mti.bankclient.server.rpc.UserCheckImpl</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ClientAccounts</servlet-name>
+        <servlet-class>ru.mti.bankclient.server.rpc.ClientAccountsImpl</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>UserCheck</servlet-name>
         <url-pattern>/ru.mti.bankclient.BankClient/usercheck/usercheck</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ClientAccounts</servlet-name>
+        <url-pattern>/ru.mti.bankclient.BankClient/clientaccounts</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
