--- a/BankClient/web/WEB-INF/web.xml
+++ b/BankClient/web/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>UserCheck</servlet-name>
-        <servlet-class>ru.mti.bankclient.server.rpc.UserCheckImpl</servlet-class>
+        <servlet-class>ru.mti.bankclient.server.BankClientServiceImpl</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ClientAccounts</servlet-name>
